[package]
name = "libcrossterm"
authors = ["Dheepak Krishnamurthy <me@kdheepak.com>"]
version = "0.5.0"
edition = "2021"
description = "C binding library for crossterm-rs"
homepage = "https://github.com/kdheepak/libcrossterm"
repository = "https://github.com/kdheepak/libcrossterm"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "crossterm"

[dependencies]
anyhow = "1.0.72"
bitflags = { version = "2.3.3", features = ["serde"] }
crossterm = { version = "0.26.1", features = ["event-stream", "serde"] }
libc = "0.2.147"
log = "0.4.19"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"

[build-dependencies]
cbindgen = "0.24.5"
